@@ -1,3 +1,11 @@
+2011-01-07  Kevin B. Kenny  <kennykb@acm.org>
+
+	* tests/util.test (util-15.*): Added test cases for floating point
+	conversion of the largest denormal and the smallest normal number,
+	to avoid any possibility of the failure suffered by PHP in the
+	last couple of days. (They didn't fail, so no actual functional
+	change.)
+
 2011-01-05  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/package.test, tests/pkg.test: Coalesce these tests into one
